# TrabalhoPOO

./: CMakeLists.txt  Caravanas.cpp  Caravanas.h  Cidade.cpp  Cidade.h  Montanhas.cpp  Montanhas.h  Simulador.cpp  Simulador.h  User.cpp  User.h  buffer.cpp  buffer.h  comandos.cpp  item.h  main.cpp
